<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="161dp"
        android:layout_height="38dp"
        android:layout_marginTop="34dp"
        android:text="@string/yourOrder"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/basepricelabel"
        android:layout_width="105dp"
        android:layout_height="27dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/basePrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/toppingslabel"
        android:layout_width="99dp"
        android:layout_height="23dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/Toppings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basepricelabel" />

    <TextView
        android:id="@+id/basepricevalue"
        android:layout_width="76dp"
        android:layout_height="23dp"
        android:layout_marginTop="40dp"
        android:text="---"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/basepricelabel"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/topingscost"
        android:layout_width="77dp"
        android:layout_height="22dp"
        android:layout_marginTop="36dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toppingslabel"
        app:layout_constraintTop_toBottomOf="@+id/basepricevalue" />

    <TextView
        android:id="@+id/deliverycost"
        android:layout_width="75dp"
        android:layout_height="21dp"
        android:layout_marginTop="60dp"
        android:text="--"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toEndOf="@+id/labeldelivery"
        app:layout_constraintTop_toBottomOf="@+id/toppingsListtextview" />

    <Button
        android:id="@+id/btnFInish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalcostlabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/toppingsListtextview"
        android:layout_width="256dp"
        android:layout_height="68dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="28dp"
        android:text="----"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppingslabel" />

    <TextView
        android:id="@+id/labeldelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="59dp"
        android:text="@string/deliveryCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppingsListtextview" />

    <TextView
        android:id="@+id/totalcostlabel"
        android:layout_width="79dp"
        android:layout_height="27dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labeldelivery" />

    <TextView
        android:id="@+id/totalcost"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toEndOf="@+id/totalcostlabel"
        app:layout_constraintTop_toBottomOf="@+id/deliverycost" />
</androidx.constraintlayout.widget.ConstraintLayout>